<resources>
    <string name="app_name">Weather Info</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="current_condition_fragment_title">Current condition</string>
    <string name="forecast_fragment_title">5 days forecast</string>

    <string name="menu_main_change_location">Change location</string>
    <string name="menu_main_settings">Settings</string>

    <string name="accuweather_api_key">M1WSwPglWwVHjqvdeFuIZwUkEMBlqolS</string>
    <string name="geoposition_result_language">en</string>

    <string name="current_forecast_wind_value">km/h</string>
    <string name="current_forecast_pressure_value">mb</string>
    <string name="current_forecast_unknown">Unknown</string>
    <string name="current_forecast_details">Details</string>
    <string name="current_forecast_real_feel">Real feel</string>
    <string name="current_forecast_real_feel_shade">Real feel shade</string>
    <string name="current_forecast_wind">Wind</string>
    <string name="current_forecast_pressure">Pressure</string>
    <string name="current_forecast_relative_humidity">Relative humidity</string>
    <string name="current_forecast_temperature_summary">Temperature Summary</string>
    <string name="current_forecast_past_6h">Past 6h</string>
    <string name="current_forecast_past_12h">Past 12h</string>
    <string name="current_forecast_past_24h">Past 24h</string>

    <string name="forecast_list_item_day">Day</string>
    <string name="forecast_list_item_night">Night</string>

    <string name="track_location_not_found">No location found..!</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="forecast_list_item_data">No data</string>

</resources>
