<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/lattime_card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MyCardViewStyle" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lasttime"
                android:text="@string/current_forecast_temperature_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/lasttime"
                android:background="@color/background" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="15dp"
                android:layout_below="@+id/lasttime">

                <TextView
                    android:id="@+id/last6hours"
                    android:text="@string/current_forecast_past_6h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/last6hours_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/last6hours"
                    android:layout_alignParentRight="true" />

                <TextView
                    android:id="@+id/last12hours_shadow"
                    android:text="@string/current_forecast_past_12h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/last6hours"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/last12hours_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/last12hours_shadow"
                    android:layout_alignParentRight="true" />

                <TextView
                    android:id="@+id/last24hours"
                    android:text="@string/current_forecast_past_24h"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/last12hours_shadow"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:id="@+id/last24hours_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/last24hours"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>